# Modern-OpenGL-Tutorial

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  temp.yml
cmake/: CMakeLists.txt.in  CreateTreeVS.cmake
dep/: obj_loader.cpp
include/: Camera.hpp  Display.hpp  Display2.hpp  Mesh.hpp  Shader.hpp  Texture.hpp  Transform.hpp  display.hpp
res/: basicShader.frag  basicShader.fs  basicShader.vert  basicShader.vs
src/: Display.cpp  Display2.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Transform.cpp  display.cpp  main.cpp
